--- a/Contact.html
+++ b/Contact.html
@@ -36,7 +36,7 @@
           </div>
           <div class="cme">
             <li>PHONE NUMBER</li>
-            <li class="det">+91 7003668***</li>
+            <li class="det">+91 7003668955</li>
             <div class="horizontal-line"></div>
           </div>
           <div class="cme">
@@ -95,8 +95,8 @@
     </div> -->
     <div class="container-fluid footer">
       <div class="container footer-nav mb-3">
-        <a href="./Home.html">Resume ></a>
-        <a href="./Home.html">Home ></a>
+        <a href="./index.html">Resume ></a>
+        <a href="./index.html">Home ></a>
       </div>
       <div class="horizontal-line"></div>
       <div class="container footer-links mt-4 pb-4">
