--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="SecondPage">
       <div class="column-1">
         <img
-          src="../Assets/Images/Image.jpeg"
+          src="./Assets/Images/Image.jpeg"
           alt="Headshot"
           class="rounded-circle"
         />
@@ -216,6 +216,6 @@
         <div>&copy; Rajdeep Das , made with love</div>
       </div>
     </div>
-    <script src="../Bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="./Bootstrap/js/bootstrap.bundle.js"></script>
   </body>
 </html>
