--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <div class="FourthPage">
       <div class="display-3">Academics</div>
       <p id="course">Bsc Computer Science</p>
-      <p id="institute">St. Xaviers College</p>
+      <p id="institute">Bangabasi College</p>
       <p id="year">2022 - 2025</p>
       <p id="course">Higher Secondary</p>
       <p id="institute">Pearls Of God</p>
